@@ -1,3 +1,5 @@
+* Add support for Mozilla's Object#__count__ property in Object.isEmpty(). [Andreas Ecker, jddalton, Nicholas Zakas]
+
 * Optimize Number#times by forking for `thisArg` and cleanup Try.these() and ObjectRange#_each. [jddalton]
 
 * Optimize Array#contains and Enumerable.contains() by forking for strict or loose matches. [jddalton]
